--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/sam-cutter/back-market-spy/issues"
   },
-  "homepage": "https://github.com/sam-cutter/back-market-spy#readme"
+  "homepage": "https://github.com/sam-cutter/back-market-spy#readme",
+  "dependencies": {
+    "puppeteer": "^21.3.8"
+  }
 }
