Changed entrypoint of project to src/index.js

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "back-market-spy",
   "version": "1.0.0",
   "description": "Track the prices of a set of products on the Back Market website, and be notified when the price drops below a certain threshold.",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
