Installed PB SDK

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/sam-cutter/back-market-spy/issues"
   },
-  "homepage": "https://github.com/sam-cutter/back-market-spy#readme"
+  "homepage": "https://github.com/sam-cutter/back-market-spy#readme",
+  "dependencies": {
+    "pocketbase": "^0.18.2"
+  }
 }
