Installed dotenv package

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sam-cutter/back-market-spy#readme",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "pocketbase": "^0.18.2"
   }
 }
